name:                aoc2018
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ahgilbert/aoc2018#readme
license:             BSD3
license-file:        LICENSE
author:              Alan Gilbert
maintainer:          alanhgilbert@gmail.com
copyright:           2018 Alan Gilbert
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc2018
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , containers
                     , array
                     , grid
  other-modules: Util
               , P01
               , P02
               , P03
               , P04
               , P05
               , P06
               , P07
               , P08
               , P09
               , P10
               , P11
